--- a/templates/register.html
+++ b/templates/register.html
@@ -46,7 +46,7 @@
             <div class="text-center page-section">
             <h2 class="section-heading text-uppercase">ADD DETAILS BELOW</h2>
             </div>
-
+            {% from bootstrap import render_form %}
             {{ render_form(form, novalidate=True) }}
         </div>
 
