--- a/templates/register.html
+++ b/templates/register.html
@@ -52,8 +52,8 @@
             <form method="POST" novalidate>
                     {{ form.hidden_tag() }}
                 <div class="form-group">
-                    {{ form.username.label }} 
-                    {{ form.username(class="form-control") }}
+                    {{ form.name.label }} 
+                    {{ form.name(class="form-control") }}
                 </div>
                 <div class="form-group">
                     {{ form.submit(class="btn btn-primary") }}
