--- a/templates/register.html
+++ b/templates/register.html
@@ -56,7 +56,15 @@
                     {{ form.name(class="form-control") }}
                 </div>
                 <div class="form-group">
-                    {{ form.submit(class="btn btn-primary") }}
+                    {{ form.email.label }} 
+                    {{ form.email(class="form-control") }}
+                </div>
+                <div class="form-group">
+                    {{ form.password.label }} 
+                    {{ form.password(class="form-control") }}
+                </div>
+                <div class="form-group">
+                    {{ form.submit(class="btn btn-primary mt-3") }}
                 </div>
             </form>
         </div>
