--- a/templates/add_coffee_shop.html
+++ b/templates/add_coffee_shop.html
@@ -44,8 +44,52 @@
             <div class="text-center page-section">
             <h2 class="section-heading text-uppercase">Add New Cafe</h2>
             </div>
-            {% from bootstrap import render_form %}
-            {{ render_form(form, novalidate=True) }}
+            <form method="POST" novalidate>
+                    {{ form.hidden_tag() }}
+                <div class="form-group">
+                    {{ form.name.label }} 
+                    {{ form.name(class="form-control") }}
+                </div>
+                <div class="form-group">
+                    {{ form.map_url.label }} 
+                    {{ form.map_url(class="form-control mt-3") }}
+                </div>
+                <div class="form-group">
+                    {{ form.img_url.label }} 
+                    {{ form.img_url(class="form-control mt-3") }}
+                </div>
+                <div class="form-group">
+                    {{ form.location.label }} 
+                    {{ form.location(class="form-control mt-3") }}
+                </div>
+                <div class="form-group">
+                    {{ form.has_sockets.label }} 
+                    {{ form.has_sockets(class="form-control mt-3") }}
+                </div>
+                <div class="form-group">
+                    {{ form.has_toilet.label }} 
+                    {{ form.has_toilet(class="form-control mt-3") }}
+                </div>
+                <div class="form-group">
+                    {{ form.has_wifi.label }} 
+                    {{ form.has_wifi(class="form-control mt-3") }}
+                </div>
+                <div class="form-group">
+                    {{ form.can_take_calls.label }} 
+                    {{ form.can_take_calls(class="form-control mt-3") }}
+                </div>
+                <div class="form-group">
+                    {{ form.seats.label }} 
+                    {{ form.seats(class="form-control mt-3") }}
+                </div>
+                <div class="form-group">
+                    {{ form.coffee_price.label }} 
+                    {{ form.coffee_price(class="form-control mt-2") }}
+                </div>
+                <div class="form-group">
+                    {{ form.submit(class="btn btn-primary mt-3") }}
+                </div>
+            </form>
         </div>
 
         <!-- Footer-->
