--- a/templates/add_coffee_shop.html
+++ b/templates/add_coffee_shop.html
@@ -68,15 +68,15 @@
                 </div>
                 <div class="form-group">
                     {{ form.has_toilet.label }} 
-                    {{ form.has_toilet(class="form-control mt-3") }}
+                    {{ form.has_toilet(class="form-check-input") }}
                 </div>
                 <div class="form-group">
                     {{ form.has_wifi.label }} 
-                    {{ form.has_wifi(class="form-control mt-3") }}
+                    {{ form.has_wifi(class="form-check-input") }}
                 </div>
                 <div class="form-group">
                     {{ form.can_take_calls.label }} 
-                    {{ form.can_take_calls(class="form-control mt-3") }}
+                    {{ form.can_take_calls(class="form-check-input") }}
                 </div>
                 <div class="form-group">
                     {{ form.seats.label }} 
