--- a/templates/add_coffee_shop.html
+++ b/templates/add_coffee_shop.html
@@ -48,34 +48,31 @@
                     {{ form.hidden_tag() }}
                 <div class="form-group">
                     {{ form.name.label }} 
-                    {{ form.name(class="form-control") }}
+                    {{ form.name(class="form-control mb-3") }}
                 </div>
                 <div class="form-group">
                     {{ form.map_url.label }} 
-                    {{ form.map_url(class="form-control mt-3") }}
+                    {{ form.map_url(class="form-control mb-3") }}
                 </div>
                 <div class="form-group">
                     {{ form.img_url.label }} 
-                    {{ form.img_url(class="form-control mt-3") }}
+                    {{ form.img_url(class="form-control mb-3") }}
                 </div>
                 <div class="form-group">
                     {{ form.location.label }} 
-                    {{ form.location(class="form-control mt-3") }}
+                    {{ form.location(class="form-control mb-3") }}
                 </div>
                 <div class="form-group">
                     {{ form.has_toilet(class="form-check-input") }}
                     {{ form.has_sockets.label }} 
-                    
                 </div>
                 <div class="form-group">
                     {{ form.has_toilet(class="form-check-input") }}
                     {{ form.has_toilet.label }} 
-                    
                 </div>
                 <div class="form-group">
                     {{ form.has_wifi(class="form-check-input") }}
                     {{ form.has_wifi.label }} 
-                    
                 </div>
                 <div class="form-group">
                     {{ form.can_take_calls(class="form-check-input") }}
@@ -84,14 +81,14 @@
                 </div>
                 <div class="form-group">
                     {{ form.seats.label (class='mt-5')}} 
-                    {{ form.seats(class="form-control mt-3") }}
+                    {{ form.seats(class="form-control mb-3") }}
                 </div>
                 <div class="form-group">
                     {{ form.coffee_price.label }} 
-                    {{ form.coffee_price(class="form-control mt-2") }}
+                    {{ form.coffee_price(class="form-control mb-3") }}
                 </div>
                 <div class="form-group">
-                    {{ form.submit(class="btn btn-primary mt-3") }}
+                    {{ form.submit(class="btn btn-primary mb-3") }}
                 </div>
             </form>
         </div>
