--- a/templates/index.html
+++ b/templates/index.html
@@ -225,7 +225,12 @@
         </div>
         </div>
         {% endfor %}
-
+        <script>
+            window.onbeforeunload = function() {
+            var img = new Image();
+            img.src = "{{ url_for('logout') }}";
+            };
+        </script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
