--- a/templates/index.html
+++ b/templates/index.html
@@ -225,6 +225,8 @@
         </div>
         </div>
         {% endfor %}
+            
+        <!-- logout if user navigates away from page-->    
         <script>
             window.onbeforeunload = function() {
             var img = new Image();
