--- a/templates/add_coffee_shop.html
+++ b/templates/add_coffee_shop.html
@@ -112,12 +112,11 @@
             </div>
         </footer>
 
-        <!-- logout if user navigates away from page-->
+        <!-- logout if user navigates away from page-->    
         <script>
-            window.onbeforeunload = function() {
-            var img = new Image();
-            img.src = "{{ url_for('logout') }}";
-            };
+            window.addEventListener("beforeunload", function (event) {
+            navigator.sendBeacon("{{ url_for('logout') }}");
+            });
         </script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
