--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>COFFEE & WIFI</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="static/assets/cup-hot-fill.svg" />
         <!-- Font Awesome icons (free version)-->
